refactor: 优化代码细节并完善部署脚本
1. 替换List.of()为Collections.emptyList()提升兼容性
2. 修复泛型遍历类型不明确问题
3. 兼容旧版Java流式收集方式
4. 新增Windows右键菜单一键部署脚本和注册表生成工具
5. 更新README文档简化说明